--- a/src/소개.md
+++ b/src/소개.md
@@ -1,4 +1,4 @@
-# 리눅스 여행에 오신 것을 환영합니다!
+# 리눅스 모험에 오신 것을 환영합니다!
 
 ## 전문
 리눅스는 재밌습니다. 리눅스를 사용하는 여정은 힘들었지만 그만큼 재밌고 중독적이었죠. 하지만 한글로 된 자료가 별로 없어서 아쉬움이 있었습니다. 
