--- a/src/소개.md
+++ b/src/소개.md
@@ -10,7 +10,7 @@
 ## 간략한 내용
 이 책에서는 서버가 아닌 데스크탑으로서 리눅스를 사용하는 팁, 혹은 정보를 적고 있습니다. 책의 내용은 개별적인 부분에 대해서 순서 없이 내용을 모아두었습니다. 
 
-1. 리눅스 사용시의 마음가짐
+1. 리눅스 사용 전에 알아둬야 할 점
     * 리눅스는 레고이다.
 	* 리눅스는 윈도우가 아니다.
 	* 리눅스는 커뮤니티이다.
