--- a/src/1장_개요_알아두어야_할_점.md
+++ b/src/1장_개요_알아두어야_할_점.md
@@ -2,7 +2,7 @@
 
 리눅스를 처음 사용하게 된다면 아마 많은 어려움을 겪게 될 겁니다. 특히나 다른 운영체제에 익숙한 분들이라면 기존에 익숙하게 사용했던 프로그램이 리눅스에서 지원되지 않을 수도 있고, 비슷한 프로그램이라도 당연하게 여겼던 기능이 없을 수도 있습니다. 평생 할 일 없을 것 같던 컴파일도 자주 하게됩니다. 하지만 두려워 할 것은 없습니다. 의지가 있는 곳에 길이 있고 의지가 있다면 리눅스도 어렵지 않을 겁니다.
 
-이번 장에서는 리눅스를 사용하면서 가지면 도움이 될 마음가짐에 대해서 설명을 간략하게 해 보도록 하려고 합니다.
+이번 장에서는 리눅스를 사용하기 전에 알아두면 좋을 부분들에 대해서 설명을 간략하게 해 보도록 하려고 합니다.
 
 ## 리눅스는 레고 같다.
 
